Some additional Chat Service improvements